Added stricter Codex prompting with workspace context to improve diff quality and application.

--- a/package.json
+++ b/package.json
@@ -134,5 +134,8 @@
     "@types/node": "^22.0.0",
     "@types/vscode": "^1.85.0",
     "typescript": "^5.4.0"
+  },
+  "dependencies": {
+    "@vscode/vsce": "^3.7.0"
   }
 }
